font-size modify

--- a/src/main/webapp/addDatings.html
+++ b/src/main/webapp/addDatings.html
@@ -38,7 +38,7 @@
     <link rel="stylesheet" href="assets/css/spinningwheel.css"/>
     <style>
         .am-badge {
-            font-size: 14px;
+            font-size: 15px;
         }
 
         #sw-header {
@@ -108,9 +108,9 @@
         </ul>
     </div>
     <div class="ad-button">
-        <div class="ad-sub">
+        <div style="padding-left: 20px;padding-right: 20px;">
             <button onclick="generateOrder()" class="am-btn am-btn-success"
-                    style=" display: block;width: 250px;margin: 0 auto;border-radius: 5px;background-color: #4EC296;border-color: #4EC296;">
+                    style="font-size:16px;display: block;width: 100%;border-radius: 5px;background-color: #4EC296;border-color: #4EC296;">
                 确定发布
             </button>
         </div>
