--- a/src/main/webapp/healthManage.html
+++ b/src/main/webapp/healthManage.html
@@ -72,21 +72,18 @@
     <div class="am-g">
         <div class="am-u-sm-6">
             <div style="height: 25px;overflow: hidden;">
-        <span style="padding-right: 5px">骨密度测试 <a class="am-icon-square-o" id="box7"
-                                                  style="font-size: 20px;display: block;position: relative;left: 95px; top: -26px;width: 20px;"
-                                                  onclick="choose('box7');"></a></span>
+                <span style="padding-right: 5px">骨密度测试 <a class="am-icon-square-o radio-box" id="box7"
+                                                          onclick="choose('box7');"></a></span>
             </div>
             <div style="height: 25px;overflow: hidden;">
-        <span style="padding-right: 5px">人体成份分析 <a class="am-icon-square-o" id="box8"
-                                                   style="font-size: 20px;display: block;position: relative;left: 95px; top: -26px;width: 20px;"
-                                                   onclick="choose('box8');"></a></span>
+                <span style="padding-right: 5px">人体成份分析 <a class="am-icon-square-o radio-box" id="box8"
+                                                           onclick="choose('box8');"></a></span>
             </div>
         </div>
         <div class="am-u-sm-6">
             <div style="height: 25px;overflow: hidden;">
-        <span style="padding-right: 5px">运动有氧能力 <a class="am-icon-square-o" id="box9"
-                                                   style="font-size: 20px;display: block;position: relative;left: 95px; top: -26px;width: 20px;"
-                                                   onclick="choose('box9');"></a></span>
+                <span style="padding-right: 5px">运动有氧能力 <a class="am-icon-square-o radio-box" id="box9"
+                                                           onclick="choose('box9');"></a></span>
             </div>
         </div>
     </div>
@@ -109,38 +106,32 @@
     <div class="am-g">
         <div class="am-u-sm-4">
             <div style="height: 25px;overflow: hidden;">
-        <span style="padding-right: 5px">健康处方 <a class="am-icon-square-o" id="box1"
-                                                 style="font-size: 20px;display: block;position: relative;left: 75px; top: -26px;width: 20px;"
-                                                 onclick="choose('box1');"></a></span>
+                <span style="padding-right: 5px">健康处方 <a class="am-icon-square-o radio-box1" id="box1"
+                                                         onclick="choose('box1');"></a></span>
             </div>
             <div style="height: 25px;overflow: hidden;">
-        <span style="padding-right: 5px">运动处方 <a class="am-icon-square-o" id="box2"
-                                                 style="font-size: 20px;display: block;position: relative;left: 75px; top: -26px;width: 20px;"
-                                                 onclick="choose('box2');"></a></span>
+                <span style="padding-right: 5px">运动处方 <a class="am-icon-square-o radio-box1" id="box2"
+                                                         onclick="choose('box2');"></a></span>
             </div>
         </div>
         <div class="am-u-sm-4">
             <div style="height: 25px;overflow: hidden;">
-        <span style="padding-right: 5px">心理咨询 <a class="am-icon-square-o" id="box3"
-                                                 style="font-size: 20px;display: block;position: relative;left: 75px; top: -26px;width: 20px;"
-                                                 onclick="choose('box3');"></a></span>
+                <span style="padding-right: 5px">心理咨询 <a class="am-icon-square-o radio-box1" id="box3"
+                                                         onclick="choose('box3');"></a></span>
             </div>
             <div style="height: 25px;overflow: hidden;">
-        <span style="padding-right: 5px">音乐理疗 <a class="am-icon-square-o" id="box4"
-                                                 style="font-size: 20px;display: block;position: relative;left: 75px; top: -26px;width: 20px;"
-                                                 onclick="choose('box4');"></a></span>
+                <span style="padding-right: 5px">音乐理疗 <a class="am-icon-square-o radio-box1" id="box4"
+                                                         onclick="choose('box4');"></a></span>
             </div>
         </div>
         <div class="am-u-sm-4">
             <div style="height: 25px;overflow: hidden;">
-        <span style="padding-right: 5px">基因测试 <a class="am-icon-square-o" id="box5"
-                                                 style="font-size: 20px;display: block;position: relative;left: 75px; top: -26px;width: 20px;"
-                                                 onclick="choose('box5');"></a></span>
+                <span style="padding-right: 5px">基因测试 <a class="am-icon-square-o radio-box1" id="box5"
+                                                         onclick="choose('box5');"></a></span>
             </div>
             <div style="height: 25px;overflow: hidden;">
-        <span style="padding-right: 5px">康护保健 <a class="am-icon-square-o" id="box6"
-                                                 style="font-size: 20px;display: block;position: relative;left: 75px; top: -26px;width: 20px;"
-                                                 onclick="choose('box6');"></a></span>
+                <span style="padding-right: 5px">康护保健 <a class="am-icon-square-o radio-box1" id="box6"
+                                                         onclick="choose('box6');"></a></span>
             </div>
         </div>
     </div>
