--- a/src/main/webapp/main.html
+++ b/src/main/webapp/main.html
@@ -109,7 +109,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="main-right">
+                    <div class="main-right" style="font-size: 15px;">
                         <div class="main-yue">
                             <!--<span class="main-people">{{currentPeople}}|{{peopleCount}}</span>-->
                             <span class="main-item">{{sportName}}</span>
@@ -118,11 +118,11 @@
                             <!--<div class="main-item"><span>{{sportName}}</span></div>-->
                             <!--<div class="main-start-time"><span>{{startTime}}-{{endTime}}</span></div>-->
                         </div>
-                        <div class="main-location" style="margin-bottom: 10px;">地点：{{location}}</div>
+                        <div class="main-location" style="margin-bottom: 10px;font-size: 16px;">地点：{{location}}</div>
                         <div>
-                            <i class="icon"></i><span class="main-time" style="padding-left: 10px;">{{currentPeople}}/{{peopleCount}}</span>
+                            <i class="icon"></i><span class="main-time" style="padding-left: 10px;font-size: 14px">{{currentPeople}}/{{peopleCount}}</span>
 
-                            <div class="main-time" style="display: inline-block;float: right;">{{diffTime}}前 发布</div>
+                            <div class="main-time" style="display: inline-block;float: right;font-size: 14px">{{diffTime}}前 发布</div>
                         </div>
                         <div>
                             {{#each sports}}
