--- a/src/main/webapp/healthManage.html
+++ b/src/main/webapp/healthManage.html
@@ -104,7 +104,7 @@
     <h2 class="jm-title">[个性化项目]<i class="am-icon-question-circle" style="padding-left: 5px"></i></h2>
     <!--<hr data-am-widget="divider" style="margin: 0.5rem auto" class="am-divider am-divider-dotted"/>-->
     <div class="am-g">
-        <div class="am-u-sm-4">
+        <div class="am-u-sm-4" style="padding-right: 0">
             <div style="height: 25px;overflow: hidden;">
                 <span style="padding-right: 5px">健康处方 <a class="am-icon-square-o radio-box1" id="box1"
                                                          onclick="choose('box1');"></a></span>
@@ -114,7 +114,7 @@
                                                          onclick="choose('box2');"></a></span>
             </div>
         </div>
-        <div class="am-u-sm-4">
+        <div class="am-u-sm-4" style="padding: 0">
             <div style="height: 25px;overflow: hidden;">
                 <span style="padding-right: 5px">心理咨询 <a class="am-icon-square-o radio-box1" id="box3"
                                                          onclick="choose('box3');"></a></span>
@@ -124,7 +124,7 @@
                                                          onclick="choose('box4');"></a></span>
             </div>
         </div>
-        <div class="am-u-sm-4">
+        <div class="am-u-sm-4" style="padding-left: 0">
             <div style="height: 25px;overflow: hidden;">
                 <span style="padding-right: 5px">基因测试 <a class="am-icon-square-o radio-box1" id="box5"
                                                          onclick="choose('box5');"></a></span>
