--- a/src/main/webapp/main.html
+++ b/src/main/webapp/main.html
@@ -164,7 +164,7 @@
                 加入成功！
             </div>
             <div class="am-modal-footer">
-                <span class="am-modal-btn" onclick="toReload()">好哒</span>
+                <span class="am-modal-btn" style="color: #4EC296" onclick="toReload()">好哒</span>
             </div>
         </div>
     </div>
