--- a/src/main/webapp/main.html
+++ b/src/main/webapp/main.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="no-js">
+<html class="zh-cmn-Hans">
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
