--- a/src/main/webapp/sportRecipe.html
+++ b/src/main/webapp/sportRecipe.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head lang="en">
+<head lang="zh-cmn-Hans">
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
