--- a/src/main/webapp/main.html
+++ b/src/main/webapp/main.html
@@ -78,6 +78,73 @@
 <script src="assets/js/handlebars.min.js"></script>
 <script src="assets/js/main.js"></script>
 <script type="text/x-handlebars-template" id="listBox">
+    {{#each officialOrder}}
+    <ul class="am-list am-list-static am-list-border main-margin">
+        <li style="padding-left: 0px;padding-right: 0px;">
+            <div class="main-container" style="height: 126px;">
+                <div class="am-g main-g">
+                    <div class="am-u-sm-4 main-left">
+                        <div class="main-center ">
+                            <div class="main-avatar" style="border-radius: 3px;">
+                                <a href="javasript:void(0)">
+                                    <img src="{{venue.picUrl}}" style="height: 100px;width: 100px"/>
+                                </a>
+                            </div>
+                            <div class="main-info" style="position: relative;top: -24px;
+                            background:-webkit-gradient(linear, 0 0, 0 100%, from(rgba(51, 51, 51, 0.1)), to(rgba(51, 51, 51, 1)));">
+                                <div class="main-name am-text-truncate">官方发布</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="am-u-sm-8 main-right" style="font-size: 15px;">
+                        <div class="main-yue">
+                            <!--<span class="main-people">{{currentPeople}}|{{peopleCount}}</span>-->
+                            <span class="main-item">羽毛球</span>
+                            <span class="main-start-time">{{startTime}}-{{endTime}}</span>
+                            <!--<div class="main-people"><span>单独约</span></div>-->
+                            <!--<div class="main-item"><span>{{sportName}}</span></div>-->
+                            <!--<div class="main-start-time"><span>{{startTime}}-{{endTime}}</span></div>-->
+                        </div>
+                        <div class="main-location" style="margin-bottom: 10px;font-size: 16px;">地点：{{venue.venueAdress}}</div>
+                        <div>
+                            <i class="icon"></i><span class="main-time" style="padding-left: 10px;font-size: 14px">{{currentPeople}}/{{peopleCount}}</span>
+
+                            <div class="main-time" style="display: inline-block;float: right;font-size: 14px">
+                                {{diffTime}}前 发布
+                            </div>
+                        </div>
+                        <div>
+                            {{#each picUrls}}
+                            <img src="{{this}}" class="main-sports"/>
+                            {{/each}}
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="main-text-bottom">
+                <div class="main-g">
+                    <div class="main-content">
+                        <span>{{content}}</span>
+                    </div>
+                    <div class="main-button" style="top: 132px;">
+                        {{#if enabled}}
+                        <button onclick="generateOrderOfficial('{{orderId}}')" type="button"
+                                class="am-btn am-btn-success am-radius am-btn-xs main-green"
+                                style="font-size: 14px;padding-left:0;padding-right:0;" id="office-confirm">
+                            我要预约
+                        </button>
+                        {{else}}
+                        <button type="button" class="am-btn am-btn-default am-radius am-btn-xs"
+                                style="font-size: 14px;"
+                                disabled="disabled">来晚了
+                        </button>
+                        {{/if}}
+                    </div>
+                </div>
+            </div>
+        </li>
+    </ul>
+    {{/each}}
     {{#each sportOrder}}
     <ul class="am-list am-list-static am-list-border main-margin">
         <li style="padding-left: 0px;padding-right: 0px;">
@@ -127,10 +194,11 @@
                             </div>
                         </div>
                         <div>
-                            {{#each sports}}
-                            <img src="{{iconUrl}}" class="main-sports"/>
+                            {{#each picUrls}}
+                            <img src="{{this}}" class="main-sports"/>
                             {{/each}}
                         </div>
+
                     </div>
                 </div>
             </div>
