--- a/src/main/webapp/addDatings.html
+++ b/src/main/webapp/addDatings.html
@@ -53,6 +53,11 @@
             <span class="am-badge ad-badge am-badge-danger" id="title-text">羽毛球</span>
         </div>
         <div class="ad-location">
+            场馆
+            <span class="am-badge ad-badge am-badge-danger" id="venue-text"></span>
+            <a id="venue-btn"><i class="am-icon-angle-right ad-arrows"></i></a>
+        </div>
+        <div class="ad-location">
             地点
             <span class="am-badge ad-badge am-badge-danger" id="location-text"></span>
             <a id="location-btn"><i class="am-icon-angle-right ad-arrows"></i></a>
@@ -93,6 +98,18 @@
     </div>
 </div>
 
+<div class="am-modal am-modal-prompt" tabindex="-1" id="ad-venue">
+    <div class="am-modal-dialog">
+        <div class="am-modal-bd">
+            请输入运动场馆(仅限11个字)
+            <input type="text" class="am-modal-prompt-input">
+        </div>
+        <div class="am-modal-footer">
+            <span class="am-modal-btn" data-am-modal-cancel>取消</span>
+            <span class="am-modal-btn" data-am-modal-confirm>提交</span>
+        </div>
+    </div>
+</div>
 <div class="am-modal am-modal-prompt" tabindex="-1" id="ad-location">
     <div class="am-modal-dialog">
         <div class="am-modal-bd">
