--- a/src/main/webapp/addDatingsOfficial.html
+++ b/src/main/webapp/addDatingsOfficial.html
@@ -111,7 +111,7 @@
 <div class="am-modal am-modal-prompt" tabindex="-1" id="ad-location">
     <div class="am-modal-dialog">
         <div class="am-modal-bd">
-            请输入具体地址
+            请输入具体地址(仅限15个字)
             <input type="text" class="am-modal-prompt-input">
         </div>
         <div class="am-modal-footer">
