--- a/src/main/webapp/main.html
+++ b/src/main/webapp/main.html
@@ -81,17 +81,25 @@
     {{#each officialOrder}}
     <ul class="am-list am-list-static am-list-border main-margin">
         <li style="padding-left: 0px;padding-right: 0px;">
-            <div class="main-container" style="height: 126px;">
+            <div class="main-container">
                 <div class="am-g main-g">
                     <div class="am-u-sm-4 main-left">
                         <div class="main-center ">
-                            <div class="main-avatar" style="border-radius: 3px;">
+                            <!--<div class="main-avatar" style="border-radius: 3px;">-->
+                            <!--<a href="javasript:void(0)">-->
+                            <!--<img src="{{venue.picUrl}}" style="height: 100px;width: 100px"/>-->
+                            <!--</a>-->
+                            <!--</div>-->
+                            <!--<div class="main-info" style="position: relative;top: -24px;-->
+                            <!--background:-webkit-gradient(linear, 0 0, 0 100%, from(rgba(51, 51, 51, 0.1)), to(rgba(51, 51, 51, 1)));">-->
+                            <!--<div class="main-name am-text-truncate">官方发布</div>-->
+                            <!--</div>-->
+                            <div class="main-avatar">
                                 <a href="javasript:void(0)">
                                     <img src="{{venue.picUrl}}" style="height: 100px;width: 100px"/>
                                 </a>
                             </div>
-                            <div class="main-info" style="position: relative;top: -24px;
-                            background:-webkit-gradient(linear, 0 0, 0 100%, from(rgba(51, 51, 51, 0.1)), to(rgba(51, 51, 51, 1)));">
+                            <div class="main-info">
                                 <div class="main-name am-text-truncate">官方发布</div>
                             </div>
                         </div>
@@ -105,7 +113,9 @@
                             <!--<div class="main-item"><span>{{sportName}}</span></div>-->
                             <!--<div class="main-start-time"><span>{{startTime}}-{{endTime}}</span></div>-->
                         </div>
-                        <div class="main-location" style="margin-bottom: 10px;font-size: 16px;">地点：{{venue.venueAdress}}</div>
+                        <div class="main-location" style="height:76px;margin-bottom: 10px;font-size: 16px;">
+                            {{venue.venueName}}<br/>地点：{{location}}
+                        </div>
                         <div>
                             <i class="icon"></i><span class="main-time" style="padding-left: 10px;font-size: 14px">{{currentPeople}}/{{peopleCount}}</span>
 
@@ -113,20 +123,22 @@
                                 {{diffTime}}前 发布
                             </div>
                         </div>
-                        <div>
-                            {{#each picUrls}}
-                            <img src="{{this}}" class="main-sports"/>
-                            {{/each}}
-                        </div>
                     </div>
                 </div>
             </div>
             <div class="main-text-bottom">
                 <div class="main-g">
-                    <div class="main-content">
-                        <span>{{content}}</span>
+                    <div class="main-content" style="overflow: hidden">
+                        <!--<span>{{content}}</span>-->
+                        <div>
+                            <!--<span style="display: inline-block;margin-top: -7px;">已报名：</span>-->
+                            {{#each picUrls}}
+                            <img src="{{this}}" class="main-sports am-round"
+                                 style="margin-top: -2px; margin-bottom: 8px; width: 32px; height: 32px;"/>
+                            {{/each}}
+                        </div>
                     </div>
-                    <div class="main-button" style="top: 132px;">
+                    <div class="main-button">
                         {{#if enabled}}
                         <button onclick="generateOrderOfficial('{{orderId}}')" type="button"
                                 class="am-btn am-btn-success am-radius am-btn-xs main-green"
@@ -148,11 +160,34 @@
     {{#each sportOrder}}
     <ul class="am-list am-list-static am-list-border main-margin">
         <li style="padding-left: 0px;padding-right: 0px;">
-            <div class="main-container" style="height: 126px;">
+            <!--<div class="main-container" style="height: 126px;">-->
+            <div class="main-container">
                 <div class="am-g main-g">
                     <div class="am-u-sm-4 main-left">
                         <div class="main-center ">
-                            <div class="main-avatar" style="border-radius: 3px;">
+                            <!--<div class="main-avatar" style="border-radius: 3px;">-->
+                            <!--<a href="timeLine.html?userId={{userId}}">-->
+                            <!--<img src="{{avatarUrl}}" style="height: 100px;width: 100px"/>-->
+                            <!--</a>-->
+                            <!--</div>-->
+                            <!--<div class="main-gender">-->
+                            <!--{{#compare sex}}-->
+                            <!--<p class="am-icon-smile-o main-boy"-->
+                            <!--style="padding-right: 15px;padding-left: 4.5px;"></p>-->
+                            <!--{{else}}-->
+                            <!--{{#judge sex}}-->
+                            <!--<p class="am-icon-mars main-boy"></p>-->
+                            <!--{{else}}-->
+                            <!--<p class="am-icon-venus main-girl"></p>-->
+                            <!--{{/judge}}-->
+                            <!--{{/compare}}-->
+                            <!--</div>-->
+                            <!--<div class="main-info" style="position: relative;top: -24px;-->
+                            <!--background:-webkit-gradient(linear, 0 0, 0 100%, from(rgba(51, 51, 51, 0.1)), to(rgba(51, 51, 51, 1)));">-->
+                            <!--<div class="main-name am-text-truncate">{{nickName}}</div>-->
+                            <!--<div class="main-age">{{age}}岁</div>-->
+                            <!--</div>-->
+                            <div class="main-avatar">
                                 <a href="timeLine.html?userId={{userId}}">
                                     <img src="{{avatarUrl}}" style="height: 100px;width: 100px"/>
                                 </a>
@@ -169,8 +204,7 @@
                                 {{/judge}}
                                 {{/compare}}
                             </div>
-                            <div class="main-info" style="position: relative;top: -24px;
-                            background:-webkit-gradient(linear, 0 0, 0 100%, from(rgba(51, 51, 51, 0.1)), to(rgba(51, 51, 51, 1)));">
+                            <div class="main-info">
                                 <div class="main-name am-text-truncate">{{nickName}}</div>
                                 <div class="main-age">{{age}}岁</div>
                             </div>
@@ -185,7 +219,9 @@
                             <!--<div class="main-item"><span>{{sportName}}</span></div>-->
                             <!--<div class="main-start-time"><span>{{startTime}}-{{endTime}}</span></div>-->
                         </div>
-                        <div class="main-location" style="margin-bottom: 10px;font-size: 16px;">地点：{{location}}</div>
+                        <div class="main-location" style="height:76px;margin-bottom: 10px;font-size: 16px;">
+                            {{venueName}}<br/>地点：{{location}}
+                        </div>
                         <div>
                             <i class="icon"></i><span class="main-time" style="padding-left: 10px;font-size: 14px">{{currentPeople}}/{{peopleCount}}</span>
 
@@ -193,12 +229,11 @@
                                 {{diffTime}}前 发布
                             </div>
                         </div>
-                        <div>
-                            {{#each picUrls}}
-                            <img src="{{this}}" class="main-sports"/>
-                            {{/each}}
-                        </div>
-
+                        <!--<div>-->
+                        <!--{{#each picUrls}}-->
+                        <!--<img src="{{this}}" class="main-sports"/>-->
+                        <!--{{/each}}-->
+                        <!--</div>-->
                     </div>
                 </div>
             </div>
@@ -207,7 +242,8 @@
                     <div class="main-content">
                         <span>{{content}}</span>
                     </div>
-                    <div class="main-button" style="top: 132px;">
+                    <!--<div class="main-button" style="top: 132px;">-->
+                    <div class="main-button">
                         {{#if enabled}}
                         <button onclick="generateOrderCustomer('{{orderId}}')" type="button"
                                 class="am-btn am-btn-success am-radius am-btn-xs main-green"
