--- a/src/main/webapp/addDatings.html
+++ b/src/main/webapp/addDatings.html
@@ -36,10 +36,12 @@
     <link rel="stylesheet" href="assets/css/amazeui.min.css">
     <link rel="stylesheet" href="assets/css/app.css">
     <link rel="stylesheet" href="assets/css/spinningwheel.css"/>
+    <script src="laydate/laydate.js"></script>
     <style>
         #sw-wrapper {
             border-top: 2px solid #6dcfaa;
         }
+
         #sw-cancel, #sw-done {
             color: #6dcfaa;
         }
@@ -61,6 +63,12 @@
             地点
             <span class="am-badge ad-badge am-badge-danger" id="location-text"></span>
             <a id="location-btn"><i class="am-icon-angle-right ad-arrows"></i></a>
+        </div>
+        <div class="ad-title">
+            日期
+            <div style="display: inline-block;float:right;padding-right: 30px;">
+                <input placeholder="请输入日期" class="laydate-icon" onclick="laydate()" id="date-text">
+            </div>
         </div>
         <div class="ad-start">
             开始时间
@@ -169,5 +177,12 @@
 <script src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
 <script src="assets/js/common.js"></script>
 <script src="assets/js/addDating.js"></script>
+<script>
+    ;!function () {
+        laydate({
+            elem: '#date-text'
+        })
+    }();
+</script>
 </body>
 </html>
