--- a/src/main/webapp/addDatingsOfficial.html
+++ b/src/main/webapp/addDatingsOfficial.html
@@ -177,7 +177,15 @@
         </div>
     </div>
 </div>
-
+<div class="am-modal am-modal-alert" tabindex="-1" id="error-alert">
+    <div class="am-modal-dialog">
+        <div class="am-modal-bd" id="error-message">
+        </div>
+        <div class="am-modal-footer">
+            <span class="am-modal-btn" onclick="toMine();">确定</span>
+        </div>
+    </div>
+</div>
 <!--[if (gte IE 9)|!(IE)]><!-->
 <script src="assets/js/jquery.min.js"></script>
 <!--<![endif]-->
