--- a/src/main/webapp/individualInfo.html
+++ b/src/main/webapp/individualInfo.html
@@ -99,7 +99,7 @@
                         position: relative;
                         top: 0px;
                         left: 8px;
-                        font-size: 15px;">(必填)
+                        font-size: 15px;">
             </span>
             <span class="am-badge ii-badge am-badge-danger" id="text-weChat">{{weChat}}</span>
             <a id="weChat-btn"><i class="am-icon-angle-right ii-arrows"></i></a>
