--- a/src/main/webapp/joinMember.html
+++ b/src/main/webapp/joinMember.html
@@ -64,33 +64,47 @@
     <hr data-am-widget="divider" style="margin: 1rem auto;" class="am-divider am-divider-dotted"/>
 </section>
 <section class="am-container jm-content">
-    <h2 class="jm-title">[收费标准]</h2>
-    <!--<hr data-am-widget="divider" style="margin: 0.5rem auto" class="am-divider am-divider-dotted"/>-->
-    <!--<div>收费标准：-->
-    <div style="height: 25px;">
-        <span>299元／月 </span>
-        <a class="am-icon-square-o"
-           style="display:block;position: relative;top: -32px;left: 88px;font-size: 24px;width:30px;"
-           id="check-box1"></a>
+    <h2 class="jm-title">[服务项目]</h2>
+    <div class="jm-serproject">
+        <div class="jm-projname">奇羽记次卡</div>
+        <div class="jm-projright">
+            <div class="jm-prorights jm-top"></div>
+            <div class="jm-prorights "></div>
+        </div>
     </div>
-    <div style="height: 25px;">
-        <span>899元／季 </span>
-        <a class="am-icon-check-square-o"
-           style="display:block;position: relative;top: -32px;left: 88px;font-size: 24px;width:30px;"
-           id="check-box2"></a>
+    <div class="jm-projinfo"><span class="jm-pronum">1</span><span class="jm-proinfos">羽毛球健身1次/2小时</span></div>
+    <div class="jm-projinfo"><span class="jm-pronum">2</span><span class="jm-proinfos">免费教练指导1次</span></div>
+    <div class="jm-projinfo"><span class="jm-pronum">3</span><span class="jm-proinfos">免费骨密度/人体成分检测</span></div>
+    <div class="jm-projinfo"><span class="jm-pronum">4</span><span class="jm-proinfos">不定期线下活动</span></div>
+    <div class="jm-serproject">
+        <div class="jm-projname">奇羽记月卡</div>
+        <div class="jm-projright">
+            <div class="jm-prorights jm-top"></div>
+            <div class="jm-prorights "></div>
+        </div>
     </div>
-    <div style="height: 25px;">
-        <span>599元／年 </span>
-        <a class="am-icon-square-o"
-           style="display:block;position: relative;top: -32px;left: 88px;font-size: 24px;width:30px;"
-           id="check-box3"></a>
+    <div class="jm-projinfo"><span class="jm-pronum">1</span><span class="jm-proinfos">羽毛球健身4次/月/2小时</span></div>
+    <div class="jm-projinfo"><span class="jm-pronum">2</span><span class="jm-proinfos">免费教练指导</span></div>
+    <div class="jm-projinfo"><span class="jm-pronum">3</span><span class="jm-proinfos">免费骨密度测试</span></div>
+    <div class="jm-projinfo"><span class="jm-pronum">4</span><span class="jm-proinfos">免费人体成分测定及评估</span></div>
+    <div class="jm-projinfo"><span class="jm-pronum">5</span><span class="jm-proinfos">免费建立健康档案</span></div>
+    <div class="jm-projinfo"><span class="jm-pronum">6</span><span class="jm-proinfos">免费线上轻问诊</span></div>
+    <div class="jm-projinfo"><span class="jm-pronum">7</span><span class="jm-proinfos">甲状腺结节筛选/女性乳房结节筛选</span></div>
+    <div class="jm-serproject">
+        <div class="jm-projname">奇羽记年卡</div>
+        <div class="jm-projright">
+            <div class="jm-prorights jm-top"></div>
+            <div class="jm-prorights "></div>
+        </div>
     </div>
-    <!--</div>-->
-    <hr data-am-widget="divider" style="margin: 1rem auto" class="am-divider am-divider-dotted"/>
-    <div><i class="am-icon-calendar" style="color:grey;padding-right: 5px"></i> <span
-            style="color: grey">2015/09/10 至 2015/12/10</span></div>
-    <div style="color: grey"><i class="am-icon-cny" style="padding-right: 5px;padding-left: 2px"></i>600元／季 <span
-            class="jm-span">在线预付</span></div>
+    <div class="jm-projinfo"><span class="jm-pronum">1</span><span class="jm-proinfos">羽毛球健身4次/月/2小时</span></div>
+    <div class="jm-projinfo"><span class="jm-pronum">2</span><span class="jm-proinfos">免费教练指导</span></div>
+    <div class="jm-projinfo"><span class="jm-pronum">3</span><span class="jm-proinfos">免费骨密度测试</span></div>
+    <div class="jm-projinfo"><span class="jm-pronum">4</span><span class="jm-proinfos">免费人体成分测定及评估</span></div>
+    <div class="jm-projinfo"><span class="jm-pronum">5</span><span class="jm-proinfos">免费建立健康档案</span></div>
+    <div class="jm-projinfo"><span class="jm-pronum">6</span><span class="jm-proinfos">免费线上轻问诊</span></div>
+    <div class="jm-projinfo"><span class="jm-pronum">7</span><span class="jm-proinfos">免费基因检测/口腔保健/中医理疗<span style="color: #999;font-size: 12px">(任选其一)</span></span></div>
+    <div class="jm-projinfo"><span class="jm-pronum">8</span><span class="jm-proinfos">免费队服1套</span></div>
 </section>
 <!--<hr data-am-widget="divider" style="margin: 1.5rem auto 0" class="am-divider am-divider-default"/>-->
 <div class="jm-btn">
